--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,11 @@ section#telefone{
 
     background: url(../pacote-d013/imagens/frame-iphone.png) no-repeat;
 }
+
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 21.5px;
+    width: 270px;
+    height: 472px;
+}
